# OOP

lab0b/: input.txt  output.csv
lab0b/src/include/: App.h  counter.h  spliter.h  writer.h
lab1/: CMakeLists.txt  README.txt
lab1/src/: CounterFibonachi.cpp  CounterFibonachi.h  ICacheable.h  LFU.cpp  LFU.h  LRU.cpp  LRU.h  main.cpp
lab2/: CMakeLists.txt  README.txt
lab2/examples/: beacon.life  input.life  output.life
lab2/src/: Cell.cpp  Cell.h  ConsoleParser.cpp  ConsoleParser.h  Life.cpp  Life.h  LifeGame.cpp  LifeGame.h  main.cpp
lab3/: CMakeLists.txt  README.txt
lab3/example/: config.txt
lab3/src/: CommandParser.cpp  CommandParser.h  ConfigParser.cpp  ConfigParser.h  Converter.cpp  Converter.h  Exceptions.cpp  Exceptions.h  FactoryConverter.cpp  FactoryConverter.h  SoundProcessor.cpp  SoundProcessor.h  WAVReaderFile.cpp  WAVReaderFile.h  WAVWriterFile.cpp  WAVWriterFile.h  main.cpp
